# palimpsest-license

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.adoc  CODE_OF_PRACTICE.md  CONTRIBUTING.adoc  CONTRIBUTING.md  EXPLAINME.md  GOVERNANCE.adoc  GOVERNANCE.md  LICENSE.md  LICENSE.txt  Makefile  README.adoc  README.md  README.nl.adoc  README.nl.md  RSR_COMPLIANCE.adoc  STATE.scm  ai-consent.nl  ai-consent.nl.md  bunfig.toml  codemeta.json  config.toml  deno.json  explainme.md  flake.nix  guix.scm  justfile  package-lock.json  package.json  project.toml  pyproject.toml  robots.txt  security.txt  setup.sh  style.css  test.sh  (+1 more)
.claude/: CLAUDE.md
.github/: CODEOWNERS  dependabot.yml
.well-known/: ai.txt  consent-required.txt  dc.xml  humans.txt  llms.txt  provenance.json  security.txt  trust.txt
ARCHIVE/: README.md.v0.3.bak  README.nl.md  package-lock.json.deprecated
GUIDES_v0.4/: Developer_Guide.md  Red_Flag_Index.md
LICENSES/: AGI-consent-template.md  AGI-consent.md  Palimpsest-v0.2.en.txt  Palimpsest-v0.2.nl.txt  Palimpsest-v0.2.readme.md  palimpsest-license-v0.3  palimpsest-license-v0.3.nl.md
METADATA_v0.4/: README.md
PROJECT_MANAGEMENT/: ROADMAP-research-augmented.md  ROADMAP-v0.7-practical.md
assets/: assets.readme.md
content/: _index.md
docs/: BIMI-implementation.md  Palimpsest-v0.2.html  bilingual-map.md  changelog.md  docs.readme.md  ethics-faq.md  ethics.md  index.md  jurisdiction-comparison.md  license-parser.js
embed/: embed.readme.md  html-snippet.html  license-summary.js  (+1 more)
ocaml/: dune-project
(+144 files in other folders)
